todoyu sysmanager extension changelog

sysmanager 1.3.1 - 2013-12-31
	* Bugfix: Set selection of person to lazy init (role-record; caused a memory_limit_exhausted error)
	* Bugfix: Made timezone required in system configuration
	* Bugfix: typo

sysmanager 1.3.0 - 2013-03-27
	* Feature: Support for SMTP account as default system email sending method (before there was only mail())
	* Added: SMTP accounts
	* Added: record config option onRecordDisplayJsCallback to register a js callback when form is displayed
	* Added: Check extension requirements for manual upload
	* Changed: replace cropping with css
    * Changed: Adapted warning message to new global style
	* Changed: Press CTRL when click in the sysmanager headlet to open it in a new window/tab
	* Changed: Sort locales by label for option list
	* Bugfix: text-overflow on empty span is not necessary
	* Bugfix: Records without isDeletable config are now always deletable
	* Bugfix: fixed problem with mailer system config
	* Require: todoyu 2.3.0

sysmanager 1.2.0 - 2012-05-03
	* Feature: Grant access to sysmanager with normal rights configuration (no admin rights required anymore)
	* Added: Records listing highlights inactive (is_active: 0) records half-transparent and preferred (is_preferred: 1) green
	* Added: Records config can now contain function reference or categorical boolean flag for isDeletable definition
	* Added: Quickinfo popup for right requirements
	* Changed: Integrated admin extension into sysmanager
	* Changed: Renamed admin.php to sysmanager.php in all extensions

sysmanager 1.1.4 - 2011-12-13
	* Added: Added config option for new debug level core
	* Changed: Persons in role form are now sorted alphabetically (instead of ID)

sysmanager 1.1.3 - 2011-11-17
	* Bugfix: Set record ID, and change ID to zero for new record (instead of -1, which breaks clean field naming)
	* Translation: Polish

sysmanager 1.1.2 - 2011-09-15
	* Bugfix: Error label was interpolated too soon