@@ -1,0 +1,97 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="ext.title">Sistem Pengelola</label>
+	<label index="page.title">Sistem Pengelola</label>
+	<label index="headlet.label">Sistem Pengelola</label>
+	<label index="tabs.extensions">Ekstensi</label>
+	<label index="tabs.extensions.back">Baris Tampilkan Ekstensi</label>
+	<label index="tabs.info">Infomarsi</label>
+	<label index="tabs.config">Konfigurasi</label>
+	<label index="tabs.rights">Hak</label>
+	<label index="tabs.records">Rekaman</label>
+	<label index="tabs.imported">Pasang</label>
+	<label index="tabs.update">Perbaruan</label>
+	<label index="tabs.search">Telusuri Pasar</label>
+	<label index="records.tab.all">Semua Rekaman</label>
+	<label index="records.title.recordTypes">Jenis Catatan Ekstensi</label>
+	<label index="records.noTypes">Ekstensi ini tidak memiliki catatan untuk mengedit</label>
+	<label index="records.saved">Rekam Tersimpan</label>
+	<label index="records.saved.fail">Menyimpan Rekaman Gagal</label>
+	<label index="records.delete.confirm">Hapus rekaman?</label>
+	<label index="records.delete">Hapus rekaman</label>
+	<label index="records.edit">Ubah rekaman</label>
+	<label index="recordType">Tipe Rekaman</label>
+	<label index="message.nomoduleallowed">Anda tidak diizinkan untuk menggunakan modul sysmanager. Silahkan hubungi administrator Anda untuk assistense lanjut.</label>
+	<label index="browse.title">Telusuri ekstensi</label>
+	<label index="backToTypeList">Tampilkan semua catatan</label>
+	<label index="rights.header">Manajer hak</label>
+	<label index="rights.save">Simpan hak</label>
+	<label index="rights.saved">Hak telah tersimpan</label>
+	<label index="rights.notAvailable">Ekstensi ini tidak memiliki hak untuk mengkonfigurasi</label>
+	<label index="rights.require">membutuhkan</label>
+	<label index="rights.dirtyChanges">Anda telah membuat perubahan yang belum disimpan. Apakah Anda ingin menyimpannya?</label>
+	<label index="rights.noRolesSelected">Tidak ada Peran tersedia. Harap tambahkan peran pertama. Gunakan tab peran untuk melakukan hal ini.</label>
+	<label index="extconf.header">Konfigurasi ekstensi</label>
+	<label index="extconf.noExtConf">Tidak ada konfigurasi yang tersedia untuk ekstensi ini</label>
+	<label index="extconf.saved">Perpanjangan Konfigurasi Tersimpan</label>
+	<label index="extconf.savingFailed">Tidak dapat Simpan Konfigurasi</label>
+	<label index="notInstalledExtensions">Ekstensi Tidak Terpasang</label>
+	<label index="installedExtensions">Ekstensi dipasang</label>
+	<label index="menu.extensions">Ekstensi</label>
+	<label index="menu.records">Kelola Rekaman</label>
+	<label index="menu.rights">Hak &amp; Peran</label>
+	<label index="menu.config">Konfigurasi sistem</label>
+	<label index="rights.tab.rights">Hik</label>
+	<label index="rights.tab.roles">Peran</label>
+	<label index="rights.form.roles">Prean</label>
+	<label index="rights.form.extension">Ekstensi</label>
+	<label index="roles.numPersons">Orang</label>
+	<label index="roles.saved.ok">Simpan Peran</label>
+	<label index="roles.saved.error">Menyimpan peran gagal</label>
+	<label index="roles.delete.confirm">Apakah Anda benar-benar ingin menghapus peran ini?</label>
+	<label index="roles.delete">Hapus Peran</label>
+	<label index="roles.delete.notify.success">Peran telah dihapus.</label>
+	<label index="roles.edit">Ubah Peran</label>
+	<label index="create.role.label">Tambah Peran</label>
+	<label index="config.logo.upload.ok">Logo telah diunggah dengan sukses. Harap menghapus cache browser Anda.</label>
+	<label index="config.logo.upload.error">Unggah Logo Gagal</label>
+	<label index="config.tab.systemconfig">Pengaturan sistem</label>
+	<label index="config.tab.systemconfig.name">Nama Sistem</label>
+	<label index="config.tab.systemconfig.email">Email Sistem</label>
+	<label index="config.tab.systemconfig.locale">Lokal Sistem</label>
+	<label index="config.tab.systemconfig.legend.timeAndDate">Waktu Dan Tanggal</label>
+	<label index="config.tab.systemconfig.timezone">Sistem Zona Waktu</label>
+	<label index="config.tab.systemconfig.firstDayOfWeek">Hari pertama dalam minggu</label>
+	<label index="config.tab.systemconfig.todoyuURL">todoyu URL</label>
+	<label index="config.tab.systemconfig.logLevel">Tingkat Log</label>
+	<label index="config.tab.repository.todoyuid">todoyu ID</label>
+	<label index="config.tab.repository.todoyuid.comment">Cari tahu lebih lanjut dan mendaftar ID todoyu pribadi Anda di:</label>
+	<label index="config.tab.systemconfig.saved">Sistem konfigurasi telah diupdate</label>
+	<label index="config.tab.systemconfig.failed">Konfigurasi sistem Memperbarui gagal</label>
+	<label index="config.tab.passwordstrength">Sandi</label>
+	<label index="config.tab.passwordstrength.minLenth">Panjang minimal</label>
+	<label index="config.tab.passwordstrength.minLenth.characters">Karakter</label>
+	<label index="config.tab.passwordstrength.hasNumbers">Nomor (0-9)</label>
+	<label index="config.tab.passwordstrength.hasLowerCase">Urutkan (a-z)</label>
+	<label index="config.tab.passwordstrength.hasUpperCase">urutkan (A-Z)</label>
+	<label index="config.tab.passwordstrength.hasSpecialChars">Karakter Khusus (_-#!?...)</label>
+	<label index="config.tab.passwordstrength.saved">Pengaturan kekuatan sandi telah disimpan.</label>
+	<label index="config.tab.logo">Ubah Logo</label>
+	<label index="config.selectlogo">Pilih Logo</label>
+	<label index="config.selectlogo.info">Pilih gambar yang ingin Anda gunakan sebagai logo Anda. Gambar akan secara otomatis diubah ukurannya maksimum 190x60 piksel. Diizinkan adalah jpg, png dan gif</label>
+	<label index="config.tab.repository">Gudang</label>
+	<label index="config.tab.repository.saved">Konfigurasi Repositori disimpan</label>
+	<label index="quickinfo.right.depends">Memerlukan hak-hak berikut:</label>
+	<label index="config.tab.systemconfig.mailer">Mailer</label>
+	<label index="config.mailer.mail">PHP mail() function</label>
+	<label index="record.smtpaccount.title">SMTP Account</label>
+	<label index="record.smtpaccount.description">SMTP based email account</label>
+	<label index="record.smtpaccount.legend">SMTP Account</label>
+	<label index="record.smtpaccount.attr.host">SMTP Server</label>
+	<label index="record.smtpaccount.attr.port">SMTP Port</label>
+	<label index="record.smtpaccount.attr.authentication">Membutuhkan Authentikasi</label>
+	<label index="record.smtpaccount.attr.username">SMTP Username</label>
+	<label index="record.smtpaccount.attr.password">SMTP Password</label>
+	<label index="record.smtpaccount.attr.name">Force name (empty=user)</label>
+	<label index="record.smtpaccount.attr.comment">Komen</label>
+</labels>
