@@ -1,0 +1,56 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="extension">Extension</label>
+	<label index="key">Extension Key</label>
+	<label index="keyAbbr">Ext-Key</label>
+	<label index="version">Versi</label>
+	<label index="state">Negara</label>
+	<label index="author">Penulis</label>
+	<label index="dependencies">Depends On</label>
+	<label index="conflicts">Konflik Dengan</label>
+	<label index="showInfo">Tampilkan Informasi Perpanjangan</label>
+	<label index="configure">Konfigurasi Ekstensi</label>
+	<label index="download">Unduh Ekstensi</label>
+	<label index="delete">Hapus ekstensi dari server</label>
+	<label index="loadfromter">Beban ekstensi dari tER</label>
+	<label index="importfromarchive">Impor perpanjangan dari arsip</label>
+	<label index="rights">Ok</label>
+	<label index="documentation">Dokumantasi</label>
+	<label index="missing">Perpanjangan hilang!</label>
+	<label index="remove">Hapus Ekstensi</label>
+	<label index="remove.confirm">Hapus ekstensi (semua file) dari server?</label>
+	<label index="showInstalledList">Tampilkan daftar ekstensi terpasang</label>
+	<label index="importExtArchive">Impor Ekstensi Arsip</label>
+	<label index="imported.info">Ekstensi ini terletak pada server Anda, namun belum dipasang.</label>
+	<label index="install">Instal Ekstensi</label>
+	<label index="install.allinstalled">Semua ekstensi di server sudah terinstal. Anda dapat mengimpor ekstensi baru dari tER todoyu atau meng-upload arsip ekstensi.</label>
+	<label index="install.confirm">Pasang Ekstensi?</label>
+	<label index="install.ok">Ekstensi telah berhasil dipasang</label>
+	<label index="install.ok.info">Ekstensi ini sekarang dipasang pada sistem Anda. Konfigurasi lebih lanjut mungkin diperlukan. Anda dapat melakukannya dalam pengaturan ekstensi. Untuk melakukannya mengubah ke sub-modul 'ekstensi'.</label>
+	<label index="installed.notify">Perpanjangan telah berhasil diinstal:</label>
+	<label index="install.error">Pemasangan ekstensi gagal</label>
+	<label index="install.error.notify.dependencies">Instalasi ekstensi gagal, ekstensi berikut harus dipasang sebelum:</label>
+	<label index="install.error.missing">Ekstensi yang diperlukan tidak terpasang</label>
+	<label index="install.error.lowVersion">Ekstensi yang diperlukan terpasang, tetapi memiliki versi terlalu rendah</label>
+	<label index="install.error.conflicts">Konflik ekstensi dengan ekstensi dipasang</label>
+	<label index="install.error.core">Versi inti terlalu rendah.</label>
+	<label index="install.error.core.atLeastVersion">Versi diperlukan setidaknya:</label>
+	<label index="uninstall">Hapus Pemasangan Ekstensi</label>
+	<label index="uninstall.confirm">Hapus Pemasangan Ekstensi?</label>
+	<label index="uninstall.ok">Perpanjangan itu dihapus berhasil</label>
+	<label index="uninstall.cannotuninstall">Tidak dapat menghapus ekstensi</label>
+	<label index="uninstall.thefollowingextdependsonit">Ekstensi berikut bergantung padanya:</label>
+	<label index="uninstall.error.general">Penghapusan instalasi dari ekstensi gagal</label>
+	<label index="uninstall.error.sysext">adalah ekstensi sistem dan tidak dapat dihapus.</label>
+	<label index="uninstall.aftermessage">Perpanjangan itu dihapus dengan sukses. Ekstensi masih tersedia di server, tapi tidak dimuat lagi.</label>
+	<label index="notify.remove.error">Menghapus ekstensi gagal</label>
+	<label index="notify.remove.success">Perpanjangan itu berhasil dihapus dari server</label>
+	<label index="upload.selectfile">Pilih ekstensi arsip (zip)</label>
+	<label index="upload.override">Timpa ekstensi yang ada (bekas)</label>
+	<label index="upload.title">Unggah Ekstensi Baru</label>
+	<label index="upload.button">Unggah Ekstensi</label>
+	<label index="upload.noArchiveSelected">Silahkan pilih arsip ekstensi untuk mengunggah</label>
+	<label index="upload.ok">Ekstensi tersebut berhasil diimpor dan sekarang dapat dipasang</label>
+	<label index="upload.error">Perpanjangan Unggah Gagal</label>
+	<label index="upload.archivehint">Sebuah arsip ekstensi todoyu harus diberi nama dengan benar: todoyuExt_EXTNAME_VERSION.zip. Ex: todoyuExt_project_1.1.0.zip</label>
+</labels>
