@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="title">Modul Manajer sistem</label>
+</labels>
