@@ -1,0 +1,69 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="form">Cari dalam repositori ekstensi todoyu</label>
+	<label index="query">Pencarian dengan kata kunci</label>
+	<label index="by">Dari</label>
+	<label index="core.newUpdateAvailable">Pembaruan inti baru yang tersedia</label>
+	<label index="core.installUpdate">Pasang Perbaruan Core</label>
+	<label index="core.cancelUpdate">Batal Core Memperbarui</label>
+	<label index="update.newversion">Versi Baru</label>
+	<label index="update.yourversion">Versi Anda</label>
+	<label index="update.releasedate">Tanggal rilis</label>
+	<label index="update.noupdatesavailable">Tidak ada perbaruan ekstensi tersedia.</label>
+	<label index="update.warning.majorupdate">Ini adalah perbaruan versi utama ekstensi yang sudah terpasang. Perpanjangan yang ada akan benar-benar ditimpa dengan yang baru.</label>
+	<label index="update.warning.general">Versi baru dan ekstensi dapat berisi fitur baru yang dapat menyebabkan masalah. Mungkin juga ada perubahan database. Pastikan Anda memiliki cadangan reguler file Anda dan database Anda.</label>
+	<label index="update.versionInformation">Informasi Versi</label>
+	<label index="noNewExtensionsFound">Ditemukan ada ekstensi baru. Anda sudah memiliki segala sesuatu yang dipasang dari market</label>
+	<label index="noExtensionsFoundForQuery">Tidak ada ekstensi yang ditemukan di pasar yang sesuai dengan query ini</label>
+	<label index="extension.extensionUpdates">Perbaruan ekstensi</label>
+	<label index="extension.moreDetails">Detail lebih</label>
+	<label index="extension.installUpdate">Pasang pembaruan</label>
+	<label index="extensionsFound">%s ekstensi ditemukan</label>
+	<label index="extension.install">Pasang Ekstensi</label>
+	<label index="extension.installed">Terpasang</label>
+	<label index="extension.update">Perbarui Ekstensi</label>
+	<label index="extension.update.install.dialogtitle">Pasang Pembaruan Ekstensi</label>
+	<label index="extension.update.confirm">Pasang pembaruan ekstensi ini?</label>
+	<label index="extension.update.success">Perbarui ekstensi telah berhasil dipasang</label>
+	<label index="extension.install.cancel">Batal</label>
+	<label index="extension.install.success">Ekstensi ini berhasil dipasang</label>
+	<label index="extension.install.confirm">Memasang ekstensi ini?</label>
+	<label index="extension.installUpdate">Pasang Pembaruan Ekstensi</label>
+	<label index="extension.installUpdate.cancel">Batalkan Pemasangan Pembaruan</label>
+	<label index="extension.downloads">Unduh</label>
+	<label index="extension.costs.free">Bebas</label>
+	<label index="extension.costs.commercial">Berbayar</label>
+	<label index="core.update.confirm">Pasang Pembaruan Core?</label>
+	<label index="core.update.success">Pembaruan Core Berhasil Terpasang</label>
+	<label index="extension.install.newExtension">Pasang Ekstesi Baru</label>
+	<label index="core.update.reload">Core telah diperbarui. Muat ulang todoyu dan membangun kembali cache. Harap bersabar</label>
+	<label index="error.noVersionInformation">Tidak Informasi Versi</label>
+	<label index="error.unresolvedDependencies">Ada dependensi yang belum terselesaikan</label>
+	<label index="error.unresolvedConflicts">Ada konflik yang belum terselesaikan</label>
+	<label index="error.downloadNoArchiveForExtVersion">Arsip pembaruan untuk versi ini hilang</label>
+	<label index="error.downloadNoArchiveForCoreVersion">Arsip pembaruan untuk versi ini hilang</label>
+	<label index="error.downloadNoFileAccess">Anda tidak diizinkan untuk mengunduh berkas ini - pastikan Anda memiliki lisensi yang valid</label>
+	<label index="error.registerTodoyuIdMissing">todoyuID hilang. Masukkan ID Anda di layar sistem konfigurasi</label>
+	<label index="error.registerExtensionMissing">Tidak ada perpanjangan diserahkan untuk pendaftaran</label>
+	<label index="error.registerDomainMissing">todoyu tidak mampu mendeteksi domain Anda untuk pendaftaran</label>
+	<label index="error.registerExtNotFound">Anda mencoba untuk mendaftar perpanjangan yang tidak tersedia di tER</label>
+	<label index="error.registerNoUserForTodoyuId">TodoyuID Anda tidak cocok untuk pengguna dari todoyu.com</label>
+	<label index="error.registerNoFreeLicensesAvailable">Anda tidak memiliki lisensi gratis untuk ekstensi ini. Beli satu di toko</label>
+	<label index="error.connectionFailed">Koneksi Ke Repositori Gagal</label>
+	<label index="error.connectionFailed.info">Pastikan Anda memutuskan dapat membuka koneksi ke internet</label>
+	<label index="error.general">repositori ekstensi todoyu melaporkan kesalahan</label>
+	<label index="error.general.info">Repositori ekstensi todoyu tidak dapat memproses permintaan Anda</label>
+	<label index="error.apiTooOld">Versi ekstensi manajer sistem tampaknya terlalu tua untuk berkomunikasi dengan tER. Silahkan memperbaruinya.</label>
+	<label index="error.unknownMethod">Anda mencoba untuk memanggil fungsi yang tidak diketahui di tER. (Ini adalah bug dan tidak seharusnya terjadi)</label>
+	<label index="error.invalidResponse">Repositori ekstensi todoyu dikirim kembali respon tidak valid. Maaf, tER tampaknya memiliki masalah. Coba nanti</label>
+	<label index="error.unknownExtension">Info: tER tidak mengenali ekstensi ini. Ini hanya masalah ketika Anda hanya mencoba untuk memasang ekstensi komersial</label>
+	<label index="license.label.accept">Terima License</label>
+	<label index="license.buyinrepository">Beli ekstensi ini dalam repositori ekstensi todoyu</label>
+	<label index="license.useLicense">menggunakan salah satu lisensi saya</label>
+	<label index="license.required">Lisensi untuk perpanjangan diperlukan!</label>
+	<label index="license.status.freeLicense">Anda memiliki lisensi yang tersedia untuk ekstensi ini. Satu akan digunakan pada instalasi.</label>
+	<label index="license.status.noLicense">Anda tidak memiliki izin yang tersedia untuk ekstensi ini.</label>
+	<label index="license.status.licensed">Anda sudah mengaktifkan ekstensi ini untuk domain saat ini. Jadi tidak ada lisensi lebih lanjut akan digunakan.</label>
+	<label index="core.installUpdate">Pasang Pembaruan Core</label>
+	<label index="moreInfo">Informasi Lebih banyak</label>
+</labels>
