@@ -1,5 +1,8 @@
 todoyu sysmanager extension changelog
 
+sysmanager 1.3.2 - not released yet
+	* Added: Indonesian Language. Credits to Abdush Shomad.
+
 sysmanager 1.3.1 - 2013-12-31
 	* Bugfix: Set selection of person to lazy init (role-record; caused a memory_limit_exhausted error)
 	* Bugfix: Made timezone required in system configuration
